cluster/apps/monitoring/grafana-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress-to-grafana
  namespace: monitoring
spec:
  # Aplica esta política a los pods de Grafana
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  # Aplica la política para el tráfico de entrada (Ingress)
  policyTypes:
    - Ingress
  # Reglas de entrada
  ingress:
    - {}
